# k-claw

./: .bot.pid  .coverage  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCH.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPORT.md  TOOLS.md  agent_loader.py  analyze_session.py  api.py  audit_tokens.py  benchmark_results_baseline.txt  cli.py  diagnose_loop.py  docs_audit_report.md  harness.py  logic.py  make.bat  persistence.py  persistence_db.py  pyproject.toml  run_analysis.sh  run_analysis_wrapper.py  run_queries.py  state.py  tasks.md  telegram_sessions.json  tools.py  ui_interface.py  utils.py
.agents/agents/: architect.md  coder.md  researcher.md  verifier.md
.agents/rules/: coding_standards.md  diagnostic-first.md  git-safety.md  no-shortcuts.md  research-first.md  security.md
.agents/skills/: python-patterns.md
.agents/tools/: delegate_to_agent.md  edit_file.md  glob_search.md  grep_search.md  list_directory.md  read_file.md  replace_string.md  run_shell.md  search_memory.md  write_file.md
.studies/: Agentic Loop - What is a Loop.md  Analise - Karpathy Auto Research vs K-Claw.md  Analise Comparativa - Agentic Loop vs K-Claw.md  Anthropic Managed Agents.txt  What is an Agent Harness.txt  transcricao.md
context_services/: context_store.py  stm_manager.py
core/: compaction.py  dialog_control.py  harness.py  hooks.py  logic.py  model_caller.py  model_config.py  planner.py  post_mortem.py  prompt_builder.py  reflection.py  state.py  tool_executor.py  utils.py
docs/decisions/: README.md
entrypoints/: api.py  bot.py  cli.py
infra/: agent_loader.py  logging_config.py  orchestrator.py  persistence.py  persistence_db.py
scripts/: analyze_session.py  audit_tokens.py  benchmark_blackboard.py  benchmark_blackboard_sync.py  benchmark_collaboration.py  benchmark_embeddings.py  benchmark_ltm_reasoning.py  benchmark_reasoning.py  benchmark_rigor.py  check_secrets.py  clear_memories.py  debug_session.py  diagnose_loop.py  run_analysis.sh  run_analysis_wrapper.py  run_queries.py
tests/: conftest.py  test_fts5_dots.py  test_guardrails.py  test_hitl.py  test_incognito.py  test_layered_search.py  test_recursive_prompt.py  test_safety.py  test_sub_agents.py  test_verifier_flow.py
tools/: __init__.py  blackboard_tools.py  classification.py  delegate_tools.py  env_tools.py  file_tools.py  memory_tools.py  registry.py  shell_tools.py
webui/: README.md
(+93 files in other folders)
