[project]
name = "agent-harness"
version = "0.1.0"
description = "Framework de orquestração multi-agente com memória em camadas e busca híbrida."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.2.4",
    "langsmith>=0.8.9",
    "pydantic>=2.13.4",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "sqlite-vec>=0.1.9",
    "uvicorn>=0.49.0",
]

[project.scripts]
agent-harness-cli = "entrypoints.cli:main"
agent-harness-api = "entrypoints.api:main"
agent-harness-bot = "entrypoints.bot:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.coverage.run]
source = [".", "core", "entrypoints", "infra", "tools"]
omit = ["tests/*", ".venv/*", "scripts/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]
